--- a/game/Game.vcxproj
+++ b/game/Game.vcxproj
@@ -77,12 +77,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>..\GLEW\include;..\SOIL;..\engine;$(IncludePath)</IncludePath>
-    <LibraryPath>..\engine\Debug;..\GLEW\lib;..\SOIL\$(Configuration);.\$(Configuration);$(LibraryPath)</LibraryPath>
+    <IncludePath>..\GLEW\include;..\SOIL;..\engine;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>..\engine\Debug;..\GLEW\lib;..\SOIL\$(Configuration);$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>..\GLEW\include;..\SOIL;..\engine;$(IncludePath)</IncludePath>
-    <LibraryPath>..\engine\Debug;..\GLEW\lib;..\SOIL\$(Configuration);.\$(Configuration);$(LibraryPath)</LibraryPath>
+    <IncludePath>..\GLEW\include;..\SOIL;..\engine;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>..\engine\Debug;..\GLEW\lib;..\SOIL\$(Configuration);$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86);$(NETFXKitsDir)Lib\um\x86</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
