stable: physics euler working

--- a/game/Game.vcxproj
+++ b/game/Game.vcxproj
@@ -21,9 +21,11 @@
   <ItemGroup>
     <ClCompile Include="GameInput.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="SnookerBall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameInput.h" />
+    <ClInclude Include="SnookerBall.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E265BD14-BD34-4ACD-9626-0DE50D82EBF1}</ProjectGuid>
@@ -35,7 +37,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v140</PlatformToolset>
+    <PlatformToolset>v120</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
