stable: sphere and plane collision detected

--- a/engine-physics/engine-physics.vcxproj
+++ b/engine-physics/engine-physics.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="Circle.cpp" />
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="Physics.cpp" />
+    <ClCompile Include="Plane.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="Shape.cpp" />
   </ItemGroup>
@@ -87,6 +88,7 @@
     <ClInclude Include="Circle.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="Physics.h" />
+    <ClInclude Include="Plane.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="Shape.h" />
   </ItemGroup>
