jsoncpp working with textures

--- a/engine-input/engine-input.vcxproj
+++ b/engine-input/engine-input.vcxproj
@@ -13,12 +13,13 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{89F1EFCF-9D4E-435C-8DE9-32B0063F6F35}</ProjectGuid>
     <RootNamespace>engineinput</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
