--- a/engine-base/engine-base.vcxproj
+++ b/engine-base/engine-base.vcxproj
@@ -13,12 +13,13 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{93122770-A683-44FC-B65C-2A60E9961F3F}</ProjectGuid>
     <RootNamespace>enginebase</RootNamespace>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>MultiByte</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -80,6 +81,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="json\jsoncpp.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="Renderer.cpp" />
@@ -91,6 +93,8 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="GameManager.h" />
+    <ClInclude Include="json\json\json-forwards.h" />
+    <ClInclude Include="json\json\json.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="PhysicsObject.h" />
     <ClInclude Include="Renderer.h" />
