--- a/engine-audio/engine-audio.vcxproj.filters
+++ b/engine-audio/engine-audio.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="AudioManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SoundObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AudioManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SoundObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
