beginning to look at logic

--- a/game/Game.vcxproj
+++ b/game/Game.vcxproj
@@ -78,11 +78,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CollisionResponse.h" />
     <ClInclude Include="GameAudio.h" />
     <ClInclude Include="GameInput.h" />
     <ClInclude Include="SnookerBall.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CollisionResponse.cpp" />
     <ClCompile Include="GameAudio.cpp" />
     <ClCompile Include="GameInput.cpp" />
     <ClCompile Include="main.cpp" />
