--- a/game/Game.vcxproj.filters
+++ b/game/Game.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="GameAudio.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CollisionResponse.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameInput.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameAudio.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CollisionResponse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
