--- a/game/Game.vcxproj.filters
+++ b/game/Game.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="CollisionResponse.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameEvents.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GameInput.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CollisionResponse.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEvents.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
