--- a/engine-base/engine-base.vcxproj
+++ b/engine-base/engine-base.vcxproj
@@ -81,6 +81,7 @@
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EventManager.cpp" />
+    <ClCompile Include="GameLogicManager.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="json\jsoncpp.cpp" />
     <ClCompile Include="Mesh.cpp" />
@@ -95,6 +96,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EventManager.h" />
+    <ClInclude Include="GameLogicManager.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="json\json\json-forwards.h" />
     <ClInclude Include="json\json\json.h" />
